--- a/chapter.tex
+++ b/chapter.tex
@@ -1,4 +1,4 @@
-\documentclass[final,times]{elsarticle}
+\documentclass[preprint,times]{elsarticle}
 \usepackage{framed}
 \usepackage{hyperref}
 \usepackage{tikz}
@@ -8,8 +8,6 @@
 \usepackage{subfigure }
 \usepackage{verbatim}
 \usepackage{amssymb}
-\newcommand{\done}{\item[\checkmark]}
-\newcommand{\crossed}{\item[$\times$]}
 
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{3}
