--- a/contents/accessible/let_the_world_know_that_you_exist.tex
+++ b/contents/accessible/let_the_world_know_that_you_exist.tex
@@ -17,16 +17,10 @@ and was a finalist in the web page category.
 
 \begin{figure}[ht]
     \centering
-   \subfigure[Advertising in the open data portal of Málaga]{ \centering \includegraphics[width=6cm]{aireGuruFinalist}}
-   \hfill
-   \subfigure[Finalist]{ \centering \includegraphics[width=5cm]{aireGuruFinalistCertificate}}
- 
+    \subfigure[Advertising in the open data portal of Málaga]
+        {\centering \includegraphics[width=6cm]{aireGuruFinalist}}
+    \hfill
+    \subfigure[Finalist]
+        {\centering \includegraphics[width=5cm]{aireGuruFinalistCertificate}}
     \caption{I Contest of reuse of open data. Málaga's town hall}
-    \end{figure}
-
-\subsubsection*{Evaluation}  
-
-\begin{itemize}
-    \done It is currently published in the open data portal of the City of Málaga.
-    \crossed More work should be done on advertising the platform and making it known.
-\end{itemize}
+\end{figure}
