--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -24,35 +24,33 @@ data cleaning.
 \subsubsection*{In the context of Aire Guru \ldots} 
 
 Our webtool uses the air quality data provided by the city of Málaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
-\newpage
+
 \begin{figure}[ht]
     \centering
-   \subfigure[Main page]
-    {\includegraphics[width=5.5cm]{openDataPortal}}
+    \subfigure[Main page]
+        {\includegraphics[width=5.5cm]{openDataPortal}}
     \hfill
     \subfigure [Category environment]
-       { \includegraphics[width=5.5cm]{openDataPortalEnviromentCategory}}
+        {\includegraphics[width=5.5cm]{openDataPortalEnviromentCategory}}
     \vfill
-     \subfigure[GeoJson Document]
-     { \centering \includegraphics[width=4.75cm]{geoJsonAirQualityDataRaw}}
-  \caption{Open Data Portal Málaga}
+    \subfigure[GeoJson Document]
+        {\centering \includegraphics[width=4.75cm]{geoJsonAirQualityDataRaw}}
+    \caption{Open Data Portal Málaga}
 \end{figure}
 
-    This data portal offers a variety of categories (represented by different icons) indicating classifications of the dataset.
-    Once a category is selected, the user is presented with a search bar that allows them to search for specific data using keywords.\\
-    
-    In this case, if we click on the link, data is displayed in a new tab. The use of software
-    for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
+This data portal offers a variety of categories (represented by different icons) indicating classifications of the dataset.
+Once a category is selected, the user is presented with a search bar that allows them to search for specific data using keywords.\\
+
+In this case, if we click on the link, data is displayed in a new tab. The use of software
+for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
 
 Aire Guru offers all the necessary information on a web platform which has been designed to facilitate human understanding.
 
-\subsubsection*{Evaluation}  
-
 \begin{itemize}
-    \done Location. Finding data is made simple, since information is displayed immediately on accessing the website. The main page
-         presents the levels of pollution in all areas without the need to make any selection.
-    \done Extraction. No specialist software or computer knowledge is necessary to access the information.
-    \done Readability. Aire Guru includes a map which shows pollution levels, represented by different colors. These colors are defined by a legend
-         below the map. It also includes a glossary explains the concepts presented on the website, the meaning of each section and includes clear instructions on how to
-         use and navigate through the web page.
+    \item Location. Finding data is made simple, since information is displayed immediately on accessing the website. The main page
+          presents the levels of pollution in all areas without the need to make any selection.
+    \item Extraction. No specialist software or computer knowledge is necessary to access the information.
+    \item Readability. Aire Guru includes a map which shows pollution levels, represented by different colors. These colors are defined by a legend
+          below the map. It also includes a glossary explains the concepts presented on the website, the meaning of each section and includes clear instructions on how to
+          use and navigate through the web page.
 \end{itemize}
