--- a/contents/accessible/remove_all_barriers_to_access.tex
+++ b/contents/accessible/remove_all_barriers_to_access.tex
@@ -29,4 +29,4 @@ Aire Guru is available online completely free of charge. It requieres login, sin
 user exposure to pollution. However, all the rest of the funtionabilities are offered to all the users, identified and no 
 identified.
 
-Aire Guru does not uses publicity.
+Aire Guru does not use advertising.
