--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -59,7 +59,7 @@ graph of stacked bars, since it is easy to see what proportion of the total AQI 
         {\includegraphics[width=5.75cm]{lineChart}}
         \hfill
     \subfigure [AQI components]
-        { \includegraphics[width=5.25cm]{stakedBarChart}}
+        {\includegraphics[width=5.25cm]{stakedBarChart}}
     \caption{Charts}
 \end{figure}
 
@@ -67,12 +67,10 @@ In addition, to explain the concept of AQI and create an awarnes about the influ
 glossary. This aids understanding of why air pollution should matter to us, with descriptions of the pollutants, medical complications, sources of contamination, the iconography used and
 an explanation of what AQI is and how it is calculated. \\
 
-\subsubsection*{Evaluation}  
-
 \begin{itemize}
-    \done The language used in the whole webtool is a common language, avoiding the use of difficult scientific terminology but providing clearly described information to understand the situation.
-    \done The most appropriate graphs for each type of data have been researched and chosen.
-    \crossed Some specific terms could not be substituted as "Air Quality Index".
-    \done The tools necessary to understand the concept have been provided. The European standard of air quality has been used to
-         represent the values and offer the user resources on the page for their comprehension in addition to external resources.
+    \item The language used in the whole webtool is a common language, avoiding the use of difficult scientific terminology but providing clearly described information to understand the situation.
+    \item The most appropriate graphs for each type of data have been researched and chosen.
+    \item Some specific terms could not be substituted as "Air Quality Index".
+    \item The tools necessary to understand the concept have been provided. The European standard of air quality has been used to
+          represent the values and offer the user resources on the page for their comprehension in addition to external resources.
 \end{itemize}
