--- a/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
+++ b/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
@@ -62,54 +62,50 @@ select the date we want.\\
 
 \begin{figure}[ht]
     \centering
-   \subfigure[Date filter]
-    {\includegraphics[width=5.5cm  ]{dateFilter}}
+    \subfigure[Date filter]
+        {\includegraphics[width=5.5cm  ]{dateFilter}}
     \hfill
     \subfigure [Medical conditions filter]
-       { \includegraphics[width=5.5cm]{MedicalConditionFilter}}
+        {\includegraphics[width=5.5cm]{MedicalConditionFilter}}
     \vfill
-     \subfigure[Pollutans filter]
-     { \centering \includegraphics[width=6cm]{pollutantsFilter}}
-  
-  \caption{Filters}
-    \end{figure}
-    The same style, colors and iconography are used throughout the design so that the user can quickly become familiar with how it works, and can
-    concentrate on the meaning of the data, rather than being distracted by trying to figure out what to do.\\
-    
-    Due to the large amount of data that is offered to the user, a waiting wheel has been implemented to indicate
-    that the webtool is processing information. Each time a control is pressed on the page, it is indicated with a change
-    of color tonality. Also, progressive transitions are used, to indicate a process is happening.
+    \subfigure[Pollutants filter]
+        {\centering \includegraphics[width=6cm]{pollutantsFilter}}
+    \caption{Filters}
+\end{figure}
 
-    
-    \begin{figure}[ht]
-        \centering
-       \subfigure[Searching bar]
+The same style, colors and iconography are used throughout the design so that the user can quickly become familiar with how it works, and can
+concentrate on the meaning of the data, rather than being distracted by trying to figure out what to do.\\
+
+Due to the large amount of data that is offered to the user, a waiting wheel has been implemented to indicate
+that the webtool is processing information. Each time a control is pressed on the page, it is indicated with a change
+of color tonality. Also, progressive transitions are used, to indicate a process is happening.
+
+\begin{figure}[ht]
+    \centering
+    \subfigure[Searching bar]
         {\includegraphics[width=5.5cm  ]{searchingBar}}
-        \hfill
-        \subfigure [Tabs]
-           { \includegraphics[width=5.5cm]{tabs}}
-        \vfill
-         \subfigure[Link]
-         { \includegraphics[width=6cm]{link}}
-         \hfill
-         \subfigure [Waiting symbol]
-            { \includegraphics[width=5.5cm]{waitingSymbol}}
-      
-      \caption{Standard widgets}
-        \end{figure}
+    \hfill
+    \subfigure [Tabs]
+        {\includegraphics[width=5.5cm]{tabs}}
+    \vfill
+    \subfigure[Link]
+        {\includegraphics[width=6cm]{link}}
+    \hfill
+    \subfigure [Waiting symbol]
+        {\includegraphics[width=5.5cm]{waitingSymbol}}
+    \caption{Standard widgets}
+\end{figure}
 
-        The elements that give us familiarity are the iconography that we use to show the AQI. We use clouds representing
-             the air. The clouds are accompanied by a heart if the quality is good, by an exclamation mark if it is poor, by a cross if it is
-             bad, and we change to a gas mask if the state is unhealthy.\\
-            
-             Today we are all familiar with GoogleMaps maps, so it makes sense to integrated this function.      
-
-\subsubsection*{Evaluation}
+The elements that give us familiarity are the iconography that we use to show the AQI. We use clouds representing
+the air. The clouds are accompanied by a heart if the quality is good, by an exclamation mark if it is poor, by a cross if it is
+bad, and we change to a gas mask if the state is unhealthy.\\
+    
+Today we are all familiar with GoogleMaps maps, so it makes sense to integrated this function.      
 
 \begin{itemize}
-    \done Has a prevailing relaxed visual aesthetic.
-    \done The representation follows a logical sequence.
-    \done Familiarity - repetition of structures and representational colors create quick familiarity with the interface, and commonly used standard iconography is respected.
-    \done Flexibility. The user can make multiple selections.
-    \crossed Waiting times should be improved.
+    \item Has a prevailing relaxed visual aesthetic.
+    \item The representation follows a logical sequence.
+    \item Familiarity - repetition of structures and representational colors create quick familiarity with the interface, and commonly used standard iconography is respected.
+    \item Flexibility. The user can make multiple selections.
+    \item Waiting times should be improved.
 \end{itemize}
