--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -8,16 +8,16 @@ modern, current, easy to use, high quality, attractive and beautiful. Although s
 
 Other more technical characteristics are: \\
 
-\textbf{Consistency.} Controls that perform similar actions must maintain the same design. Functionalities
+\textbf{Consistent} Controls that perform similar actions must maintain the same design. Functionalities
 should also follow this principle. \\
 
-\textbf{Cleaning and order.} An organized design looks better, give a more peaceful feeling and enables the user to find what they are looking for
+\textbf{Clean and ordered} An organized design looks better, give a more peaceful feeling and enables the user to find what they are looking for
 more easily.\\
 
-\textbf{Details.} A label with different typology or other color may jarr the user's perception. Only use when
+\textbf{Detailed} A label with different typology or other color may jarr the user's perception. Only use when
 we want to highlight something in particular!. \\
 
-\textbf{Sena de identidad.} It is highly recommended to 'brand' ourselves, so that users can recognize us quickly. For this we can utilize a symbol, a combination of colors, a logo, etc.\\
+\textbf{Branded} It is highly recommended to 'brand' ourselves, so that users can recognize us quickly. For this we can utilize a symbol, a combination of colors, a logo, etc.\\
 
 To be able to hook our users, gamification is currently widely used. This is where we give a gaming aspect to the representation of the data. The user tries it because it catches their attention, it's fun.
 Certainly, at some point the novelty wears off, but, even so, the user has learned to use the interface and now feels well-disposed to continue to use it.
@@ -47,17 +47,15 @@ lower area where we will find the zone and custom history.
     \caption{Heading}
 \end{figure}
  
-    The symbol of our webtool is a genius, is a guru. We also include "Aire" in the logo, because it perfectly represents 
-    what we show with our webtool. Aire Guru is the genius of air.
-    
-    Finally, we've taken into account that the user may wish to use our webtool on different devices. We've implemented
-    two different formats, one for larger screens such as the computer and another for smaller format tablets or mobiles.
+The symbol of our webtool is a genius, is a guru. We also include "Aire" in the logo, because it perfectly represents 
+what we show with our webtool. Aire Guru is the genius of air.
 
-\subsubsection*{Evaluation}  
+Finally, we've taken into account that the user may wish to use our webtool on different devices. We've implemented
+two different formats, one for larger screens such as the computer and another for smaller format tablets or mobiles.
 
 \begin{itemize}
-    \done The design is organized and clean. 
-    \done The user can find easierly what he is looking for.
-    \done Minimized numbers of clicks since the most relevant info is shown directly in the launching page.
-    \crossed Although there have been attempts to implement the design aesthetics that are now trending on the market, the design can be improved.
+    \item The design is organized and clean. 
+    \item The user can easily find what they are looking for.
+    \item Minimized numbers of clicks since the most relevant info is shown directly in the launching page.
+    \item Although there have been attempts to implement the design aesthetics that are now trending on the market, the design can be improved.
 \end{itemize}
