--- a/contents/introduction/_section.tex
+++ b/contents/introduction/_section.tex
@@ -5,7 +5,7 @@ Making scientific and technical information available to the general public has 
 Often such information, the use of which could be of enormous benefit to the public, falls on deaf ears.\\
 
 We now have access to a new form of scientific data - 'big data' - massive numbers of data points.
-This data is accumulating at enormous rates, and their is an obvious desire to use it, both for
+This data is accumulating at enormous rates, and there is an obvious desire to use it, both for
 commercial and 'public good' reasons.\\
 
 We have ways of delivering this information that are effectively free, and can be made extremely compelling
