--- a/contents/preliminaries/know_your_user.tex
+++ b/contents/preliminaries/know_your_user.tex
@@ -37,22 +37,20 @@ During the market study, we realized that many existing tools offered informatio
 \end{itemize}
 
 Once implemented, we tested the webtool with 14 users. Our webtool integrates Google Analytics that allow us to evaluate
-user behavior, how many pages they access, and how long they stay on them. Also, after the test, we conducted a survey to measure not only the level of satisfaction with the webtool, but also to verify the utility and if the user was able to achieve their objective.
+user behavior, how many pages they access, and how long they stay on them. Also, after the test, we conducted a survey to measure not only the level of satisfaction with the webtool, but also to verify the utility and if the user was able to achieve their objective.\\
+
+The market study made us clearly see the shortcomings that exist in current applications.\\
+
+The survey gave us positive evaluations regarding the useability, interpretability, and depth of information reported.\\
+
+Thanks to Aire Guru, users noticed about medical conditions with the potential to affect them personally, that could be caused or made worse by air pollution.\\
+
 \begin{figure}[ht]
     \centering
-   \subfigure[Aire Guru Form]
-    {\includegraphics[width=5.5cm  ]{form}}
+    \subfigure[Aire Guru Form]
+        {\includegraphics[width=5.5cm  ]{form}}
     \hfill
     \subfigure [Google Analytics]
-       { \includegraphics[width=5.5cm]{googleAnalytics}}
-  
-  \caption{User Feedback}
-    \end{figure}
- 
-\subsubsection*{Evaluation}
-
-\begin{itemize}
-    \done The market study made us clearly see the shortcomings that exist in current applications.
-    \done The survey gave us positive evaluations regarding the useability, interpretability, and depth of information reported.
-    \done Thanks to Aire Guru, users noticed about medical conditions with the potential to affect them personally, that could be caused or made worse by air pollution.
-\end{itemize}
+        {\includegraphics[width=5.5cm]{googleAnalytics}}
+    \caption{User Feedback}
+\end{figure}
