--- a/contents/relevant/the_facts_and_just_the_facts.tex
+++ b/contents/relevant/the_facts_and_just_the_facts.tex
@@ -31,31 +31,28 @@ In addition, the measurement is unique for everyone and the general, the AQI, th
 
 If the measure does not exist, we simply ignore it. We do not provide explanations or values such as 0 that can be mis-interpreted, erroneously reading as if there was no pollution.\\
 
-
 In the following figure we see the difference between the zone history and the personalized, the first of them does not show
 the point where the measure was taken since it has been selected in the main map. We also like for the history of
 zone there is no filter for hours, since the measurements are reported every hour, this means that we will not find
 intermediate measures in the dataset.\\
 
-\newpage
 \begin{figure}[ht]
     \centering
     \includegraphics[width=11cm]{zoneRecords}
     \caption{Zone Records}
 \end{figure}
+
 \begin{figure}[ht]
     \centering
     \includegraphics[width=11cm]{personalRecords}
     \caption{Personal Records}
 \end{figure}
 
-\subsubsection*{Evaluation}  
-
 \begin{itemize}
-    \done The information not relevant to the user has been removed.
-    \crossed Exact measurements have been given. This data is quite technical for the user, but 
-    it lends veracity to the data. Therefore we have given it a secondary position so it doesn't distract the user.
-    \crossed It has implemented a functionality to export the data. The comments of our testers revealed
-    that this functionality is not useful for the average user, since they do not have the necessary tools to
-    analyze the data and all the information is represented in a better format in the webtool itself.
+    \item The information not relevant to the user has been removed.
+    \item Exact measurements have been given. This data is quite technical for the user, but 
+          it lends veracity to the data. Therefore we have given it a secondary position so it doesn't distract the user.
+    \item It has implemented a functionality to export the data. The comments of our testers revealed
+          that this functionality is not useful for the average user, since they do not have the necessary tools to
+          analyze the data and all the information is represented in a better format in the webtool itself.
 \end{itemize}
