--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -26,6 +26,7 @@ If not directly, we the combination of them. Next, we decide which values are mo
 \subsubsection*{In the context of Aire Guru \ldots}
 
 Our main objective is to create awareness of the importance of air pollution in our health. For this we investigate different concepts:
+
 \begin{itemize}
     \item What diseases are affected by air pollution.
     \item What pollutants are those that create or influence diseases.
@@ -34,6 +35,7 @@ Our main objective is to create awareness of the importance of air pollution in 
     \item How it is calculated and what parameters we need for its calculation.
     \item What are the harmful levels in general and for each pollutant.
 \end{itemize}
+
 The measure that best represents the level of air pollution, in this case is the AQI. The city of Málaga is covered by the European legislation, 
 so we focus investigations of official sources in this regulation.
 We look for the relationships that pollutants have with different diseases, for this we resort to clinical studies. For each of the diseases, we 
@@ -50,32 +52,29 @@ samples to provide us with the most complete information or the most accurate, i
 one and in the case that there is only qualitative
 the following values are decided: Good: 50, Acceptable: 150, Poor: 300, Bad: 400, Unhealthy: 500 and the user will be informed when the value is qualitative. \\
 
-
 At this point we know how air pollution affects our health, We make very clear which are the undesirable values by using the alert colors, yellow, orange and 
 red. These colors are chosen in the palette of the colors provided by the EAQI.
 Height is used in graphics, since it is an intuitive representation for humans. In addition, the icon that represents unhealthy levels of pollution, is
 totally different, designed to clearly convey danger. \\
+
 \begin{figure}[ht]
     \centering
-   \subfigure[BarChart Aire Guru]
-    {\includegraphics[width=5cm  ]{barchart}}
+    \subfigure[BarChart Aire Guru]
+        {\includegraphics[width=5cm  ]{barchart}}
     \hfill
     \subfigure [Categoria medio ambiente]
-       { \includegraphics[width=4cm]{unhealthyIcon}}
-  
-  \caption{Alert situation}
-    \end{figure}
+        {\includegraphics[width=4cm]{unhealthyIcon}}
+    \caption{Alert situation}
+\end{figure}
 
-    Regarding the workflow, we are guiding the user from the selection of a point in the city of Málaga, either on his own initiative
-    or automatic to the details of this point in real time and we continue to show  the evolution of the pollution at that point.
-    The logic of this development is that it is anticipated that the user will be interested in the pollution that surrounds him in real time and if
-    he wanta to know the breakdown of the pollutants at the point where he is, he can continue to inquire. The map, in addition to showing
-    the point where the user is, serves as verification, gives more realism and confidence to the user.
-
-\subsubsection*{Evaluation}
+Regarding the workflow, we are guiding the user from the selection of a point in the city of Málaga, either on his own initiative
+or automatic to the details of this point in real time and we continue to show  the evolution of the pollution at that point.
+The logic of this development is that it is anticipated that the user will be interested in the pollution that surrounds him in real time and if
+he wanta to know the breakdown of the pollutants at the point where he is, he can continue to inquire. The map, in addition to showing
+the point where the user is, serves as verification, gives more realism and confidence to the user.
 
 \begin{itemize}
-    \done The objective has been clearly defined and an investigation has been carried out, determining if the dataset is appropriate.
-    \done Worrying levels have been defined as poor, bad and unhealthy and are represented in the Air Guru webtool. They stand out clearly so that the user is able to locate them quickly.
-    \done The workflow is satisfactory, since the user knows the level of pollution at any location, at a simple glance. It is easy to explore the information further, if the user wishes.
+    \item The objective has been clearly defined and an investigation has been carried out, determining if the dataset is appropriate.
+    \item Worrying levels have been defined as poor, bad and unhealthy and are represented in the Air Guru webtool. They stand out clearly so that the user is able to locate them quickly.
+    \item The workflow is satisfactory, since the user knows the level of pollution at any location, at a simple glance. It is easy to explore the information further, if the user wishes.
 \end{itemize}
